--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/Project-image.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -174,7 +174,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/mkk-img.png"
                 alt="Project 3"
                 class="project-img"
               />
